Update oapi-codegen, add session management
